# CodeReviewAI

./: .env  README.md  app.py  docker-compose.redis.yml  pyproject.toml
codereviewai/: api.py  schemas.py  services.py  settings.py
codereviewai/agent/: agent.py  role_description.md
codereviewai/redis_cache/: redis_cache.py
tests/: endpoint.py
