[tool.poetry]
name = "codereviewai"
version = "0.1.0"
description = ""
authors = ["shkrobik2017 <shkrobik2017@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.3"
httpx = "^0.27.2"
openai = "^1.52.1"
pydantic = "^2.9.2"
redis = "^5.1.1"
aioredis = "^2.0.1"
python-dotenv = "^1.0.1"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = {extras = ["http2"], version = "^0.27.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
